# librm

./: .gitlab-ci.yml  LICENSE  README.md  TODO  librm.doap  meson.build  meson_options.txt  org.tabos.rm.gschema.xml
docs/: meson.build  rm-docs.xml  version.xml.in
plugins/: meson.build
plugins/areacodes_global/: areacodes_global.c  csv.c  meson.build
plugins/capi/: capi.c  capi.desktop.in  capi.h  fax.c  fax.h  isdn-convert.c  meson.build  phone.c  phone.h  ringtone.c  sff.c
plugins/fritzbox/: callmonitor.c  callmonitor.h  csv.c  csv.h  firmware-04-00.c  firmware-04-74.c  firmware-05-50.c  firmware-06-35.c  firmware-common.c  firmware-common.h  firmware-query.c  firmware-query.h  firmware-tr64.c  firmware-tr64.h  fritzbox.c  fritzbox.desktop.in  fritzbox.h  meson.build
plugins/fritzfon/: fritzfon.c  meson.build  org.tabos.rm.plugins.fritzfon.gschema.xml  rm-plugins-fritzfon.metainfo.xml.in
plugins/gnotification/: gnotification.c  gnotification.desktop.in  meson.build  org.tabos.rm.plugins.gnotify.gschema.xml
plugins/gstreamer/: gstreamer.c  gstreamer.desktop.in  meson.build
plugins/portaudio/: portaudio.c
plugins/pulseaudio/: meson.build  pulseaudio.c
plugins/reverselookup/: meson.build  reverselookup.c  reverselookup.h
plugins/secret/: meson.build  secret.c
plugins/simple_pwd/: meson.build  simple_pwd.c
plugins/wincred/: meson.build  wincred.c
po/: de.po  meson.build  rm.pot
rm/: meson.build  rm.gresource.xml  rm.h  rmaction.c  rmaction.h  rmaddressbook.c  rmaddressbook.h  rmaudio.c  rmaudio.h  rmcallentry.c  rmcallentry.h  rmconnection.c  rmconnection.h  rmcontact.c  rmcontact.h  rmcsv.c  rmcsv.h  rmdevice.c  rmdevice.h  rmfax.c  rmfax.h  rmfaxserver.c  rmfaxserver.h  rmfaxspooler.c  rmfaxspooler.h  rmfile.c  rmfile.h  rmfilter.c  rmfilter.h  rmftp.c  rmftp.h  rmimage.c  rmimage.h  rmjournal.c  rmjournal.h  rmlog.c  rmlog.h  rmlookup.h  rmmain.c  rmmain.h  (+37 more)
rm/data/: meson.build
tests/: action.c  call.c
