option('enable-documentation', type: 'boolean', value: 'false', description : 'Build API reference and tools documentation')
option('enable-secret', type: 'boolean', value: 'true', description : 'Enable libsecret plugin')
option('enable-pulseaudio', type: 'boolean', value: 'false', description : 'Enable pulseaudio plugin')